# wired

./: .gitignore  ALL_TASKS.md  BLUEPRINT.md  CLAUDE.md  CURR_TASKS.md  Cargo.toml  IDEAS.md  IDEAS_FROM_LAIN.md  MISTAKES.md  PAPER.md  PRINCIPLES.md  README.md  run_phase3.bat
data/: brain_corpus.json  brain_corpus_v18.json  corpus_expansion_v18.json
scripts/: build_corpus.py  grid_search.sh  safe-run.sh
src/: brain.rs  eval.rs  executor.rs  lib.rs  main.rs  memory.rs  pipeline.rs  planner.rs  session.rs  tokenizer.rs  training.rs  transformer.rs
tests/: integration.rs
