[package]
name = "gestalt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
candle-core = "0.9"
candle-nn = "0.9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[[bin]]
name = "gestalt"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
